# wta-hashing

./: README.md
dotProductHashing/dotProductHashing/: .gitignore
dotProductHashing/dotProductHashing/include/: HashStore.hpp  Hasher.hpp  IDValPair.hpp
dotProductHashing/dotProductHashing/src/core/: ExactHighestProduct.cpp  HashStoreSimple.cpp  HasherSimple.cpp  LEMSimple.cpp  WTACacheAwareSecondTry.cpp  WTAModular.cpp  utility.h
dotProductHashing/dotProductHashing/src/examples/: example1.cpp  largeDB.cpp
dotProductHashing/dotProductHashing/src/test/: testExactHighestProduct.cpp  testWTACacheAware.cpp  testWTAModular.cpp
dotProductHashing/dotProductHashing/src/util/: mathematics.h
wta-hashing/: .gitignore  CMakeLists.txt  contributors.txt
wta-hashing/cmake/: dotProductHashingConfig.cmake.in
wta-hashing/include/: Counter.hpp  DotProductHasher.hpp  GSL-placeHolder.hpp
wta-hashing/src/core/: WTACacheAware.cpp  WTACacheAwareSecondTry.cpp  WTAHasherSimple.cpp  utility.cpp
wta-hashing/src/python/: DotProductHasher.cxx
wta-hashing/src/test/: testExactHighestProduct.cpp  testLEMSimple.cpp  testWTACacheAware.cpp  testWTAHasher.cpp
wta-hashing/src/util/: mathematics.cpp
